# ToyOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.termux  README.md  build.sh  debug.sh  run.sh
.github/workflows/: build.yml
boot/: boot.asm
docs/: 00-index.txt  boot-process.txt  build-system.txt  driver-layer.txt  interrupt-handling.txt  kernel-core.txt  memory-layout.txt  rust-integration.txt  syscall-interface.txt  vfs-layer.txt  virtual-memory.txt
docs/abi/: calling-conventions.txt  type-compatibility.txt
docs/api/: driver.txt  interrupt.txt  memory.txt  paging.txt  serial.txt  terminal.txt  timer.txt
driver/: driver.cpp  keyboard.c  keyboard.h  logger.cpp  rtc.c  rtc.h  speaker.c  speaker.h
kernel/: asm_utils.asm  cursor.c  cursor.h  gdt.c  gdt.h  gdt_flush.asm  heap.c  heap.h  idt.c  idt.h  idt_load.asm  interrupt.asm  interrupt_handlers.c  irq.c  irq.h  kernel.c  linker.ld  memory.h  memory_funcs.c  paging.c  paging.h  paging_asm.asm  pic.c  pic.h  port.h  power.c  power.h  serial.c  serial.h  shell.c  shell.h  string.c  string.h  syscall.asm  syscall.c  syscall.h  syscall_test.c  syscall_wrapper.h  task.c  task.h  (+5 more)
rust_module/: Cargo.toml  i686-toyos.json
rust_module/.cargo/: config.toml
rust_module/src/: bitmap.rs  ipc.rs  lib.rs  memfs.rs  memory_pool.rs  process.rs  scheduler.rs  utils.rs  vfs.rs
